src/grammar/ZScriptParser.js
// Generated from ZScript.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import ZScriptListener from './ZScriptListener.js';
import ZScriptVisitor from './ZScriptVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ZScriptParser extends antlr4.Parser {

    static grammarFileName = "ZScript.g4";
    static literalNames = [ null, null, "'fn'", "'let'", "'var'", "'const'", 
                            "'defer'", "'if'", "'else'", "'return'", "'class'", 
                            "'extends'", "'import'", "'export'", "'from'", 
                            "'try'", "'catch'", "'finally'", "'new'", "'for'", 
                            "'while'", "'this'", "'struct'", "'enum'", "'interface'", 
                            "'as'", "'type'", "'match'", "'default'", "'async'", 
                            "'await'", "'yield'", "'typeof'", "'macro'", 
                            "'queue'", "'js'", "'unless'", "'repeat'", "'forever'", 
                            "'fail'", "'break'", "'continue'", "'get'", 
                            "'set'", "'unknown'", "'in'", "'of'", "'comptime'", 
                            "'static'", "'debugger'", "'public'", "'private'", 
                            "'protected'", "'('", "')'", "'{'", "'}'", "'['", 
                            "']'", "';'", "','", "'='", "'+='", "'-='", 
                            "'.'", "':'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                            "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                            "'&&'", "'||'", "'!'", "'|>'", "'=>'", "'?'", 
                            "'|'", "'...'", "'null'" ];
    static symbolicNames = [ null, "RegexLiteral", "FN", "LET", "VAR", "CONST", 
                             "DEFER", "IF", "ELSE", "RETURN", "CLASS", "EXTENDS", 
                             "IMPORT", "EXPORT", "FROM", "TRY", "CATCH", 
                             "FINALLY", "NEW", "FOR", "WHILE", "THIS", "STRUCT", 
                             "ENUM", "INTERFACE", "AS", "TYPE", "MATCH", 
                             "DEFAULT", "ASYNC", "AWAIT", "YIELD", "TYPEOF", 
                             "MACRO", "QUEUE", "JS", "UNLESS", "REPEAT", 
                             "FOREVER", "FAIL", "BREAK", "CONTINUE", "GET", 
                             "SET", "UNKNOWN", "IN", "OF", "COMPTIME", "STATIC", 
                             "DEBUGGER", "PUBLIC", "PRIVATE", "PROTECTED", 
                             "OpenParen", "CloseParen", "OpenBrace", "CloseBrace", 
                             "OpenBracket", "CloseBracket", "SemiColon", 
                             "Comma", "Assign", "PlusAssign", "MinusAssign", 
                             "Dot", "COLON", "Plus", "Minus", "Multiply", 
                             "Divide", "Modulus", "LessThan", "MoreThan", 
                             "LessEqual", "MoreEqual", "Equals_", "NotEquals", 
                             "AND", "OR", "NOT", "Pipe", "Arrow", "Question", 
                             "UnionSep", "ELLIPSIS", "NullLiteral", "BooleanLiteral", 
                             "DecimalLiteral", "BigIntLiteral", "StringLiteral", 
                             "TemplateString", "Identifier", "DOC_COMMENT", 
                             "LineComment", "BlockComment", "WhiteSpaces" ];
    static ruleNames = [ "program", "statement", "labeledStatement", "debuggerStmt", 
                         "block", "varDecl", "varDeclContent", "bindingPattern", 
                         "arrayBindingPattern", "objectBindingPattern", 
                         "objectBindingElement", "functionDecl", "macroDecl", 
                         "structDecl", "structField", "enumDecl", "enumMember", 
                         "interfaceDecl", "interfaceField", "typeAlias", 
                         "classDecl", "classElement", "visibility", "typeParameters", 
                         "typeArguments", "importStmt", "importItems", "importItem", 
                         "exportStmt", "deferStmt", "ifStatement", "tryStatement", 
                         "forStatement", "whileStatement", "returnStatement", 
                         "expressionStatement", "queueStmt", "jsBlock", 
                         "unlessStmt", "repeatStmt", "foreverStmt", "failStmt", 
                         "breakStmt", "continueStmt", "comptimeStmt", "comptimeVarDecl", 
                         "expression", "matchArm", "formalParameterList", 
                         "parameter", "arguments", "anyIdentifier", "type", 
                         "typeSuffix", "arrayLiteral", "objectLiteral", 
                         "property", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ZScriptParser.ruleNames;
        this.literalNames = ZScriptParser.literalNames;
        this.symbolicNames = ZScriptParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 46:
    	    		return this.expression_sempred(localctx, predIndex);
    	case 52:
    	    		return this.type_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 18);
    		case 1:
    			return this.precpred(this._ctx, 17);
    		case 2:
    			return this.precpred(this._ctx, 16);
    		case 3:
    			return this.precpred(this._ctx, 15);
    		case 4:
    			return this.precpred(this._ctx, 14);
    		case 5:
    			return this.precpred(this._ctx, 13);
    		case 6:
    			return this.precpred(this._ctx, 12);
    		case 7:
    			return this.precpred(this._ctx, 8);
    		case 8:
    			return this.precpred(this._ctx, 29);
    		case 9:
    			return this.precpred(this._ctx, 28);
    		case 10:
    			return this.precpred(this._ctx, 27);
    		case 11:
    			return this.precpred(this._ctx, 26);
    		case 12:
    			return this.precpred(this._ctx, 25);
    		case 13:
    			return this.precpred(this._ctx, 23);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    type_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 14:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ZScriptParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4026332926) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 180264959) !== 0) || ((((_la - 79)) & ~0x1f) === 0 && ((1 << (_la - 79)) & 8129) !== 0)) {
	            this.state = 116;
	            this.statement();
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 122;
	        this.match(ZScriptParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ZScriptParser.RULE_statement);
	    var _la = 0;
	    try {
	        this.state = 179;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.block();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 125;
	                this.visibility();
	            }

	            this.state = 128;
	            this.varDecl();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 130;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 129;
	                this.visibility();
	            }

	            this.state = 132;
	            this.typeAlias();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 134;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 133;
	                this.visibility();
	            }

	            this.state = 136;
	            this.functionDecl();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 138;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 137;
	                this.visibility();
	            }

	            this.state = 140;
	            this.macroDecl();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 142;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 141;
	                this.visibility();
	            }

	            this.state = 144;
	            this.classDecl();
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 145;
	                this.visibility();
	            }

	            this.state = 148;
	            this.structDecl();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 149;
	                this.visibility();
	            }

	            this.state = 152;
	            this.enumDecl();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 154;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 50)) & ~0x1f) === 0 && ((1 << (_la - 50)) & 7) !== 0)) {
	                this.state = 153;
	                this.visibility();
	            }

	            this.state = 156;
	            this.interfaceDecl();
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 157;
	            this.importStmt();
	            break;

	        case 11:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 158;
	            this.exportStmt();
	            break;

	        case 12:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 159;
	            this.deferStmt();
	            break;

	        case 13:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 160;
	            this.ifStatement();
	            break;

	        case 14:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 161;
	            this.tryStatement();
	            break;

	        case 15:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 162;
	            this.forStatement();
	            break;

	        case 16:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 163;
	            this.whileStatement();
	            break;

	        case 17:
	            this.enterOuterAlt(localctx, 17);
	            this.state = 164;
	            this.returnStatement();
	            break;

	        case 18:
	            this.enterOuterAlt(localctx, 18);
	            this.state = 165;
	            this.expressionStatement();
	            break;

	        case 19:
	            this.enterOuterAlt(localctx, 19);
	            this.state = 166;
	            this.queueStmt();
	            break;

	        case 20:
	            this.enterOuterAlt(localctx, 20);
	            this.state = 167;
	            this.jsBlock();
	            break;

	        case 21:
	            this.enterOuterAlt(localctx, 21);
	            this.state = 168;
	            this.unlessStmt();
	            break;

	        case 22:
	            this.enterOuterAlt(localctx, 22);
	            this.state = 169;
	            this.repeatStmt();
	            break;

	        case 23:
	            this.enterOuterAlt(localctx, 23);
	            this.state = 170;
	            this.foreverStmt();
	            break;

	        case 24:
	            this.enterOuterAlt(localctx, 24);
	            this.state = 171;
	            this.failStmt();
	            break;

	        case 25:
	            this.enterOuterAlt(localctx, 25);
	            this.state = 172;
	            this.breakStmt();
	            break;

	        case 26:
	            this.enterOuterAlt(localctx, 26);
	            this.state = 173;
	            this.continueStmt();
	            break;

	        case 27:
	            this.enterOuterAlt(localctx, 27);
	            this.state = 174;
	            this.comptimeStmt();
	            break;

	        case 28:
	            this.enterOuterAlt(localctx, 28);
	            this.state = 175;
	            this.comptimeVarDecl();
	            break;

	        case 29:
	            this.enterOuterAlt(localctx, 29);
	            this.state = 176;
	            this.labeledStatement();
	            break;

	        case 30:
	            this.enterOuterAlt(localctx, 30);
	            this.state = 177;
	            this.debuggerStmt();
	            break;

	        case 31:
	            this.enterOuterAlt(localctx, 31);
	            this.state = 178;
	            this.match(ZScriptParser.SemiColon);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	labeledStatement() {
	    let localctx = new LabeledStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ZScriptParser.RULE_labeledStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(ZScriptParser.Identifier);
	        this.state = 182;
	        this.match(ZScriptParser.COLON);
	        this.state = 183;
	        this.statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	debuggerStmt() {
	    let localctx = new DebuggerStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ZScriptParser.RULE_debuggerStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185;
	        this.match(ZScriptParser.DEBUGGER);
	        this.state = 186;
	        this.match(ZScriptParser.SemiColon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ZScriptParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        this.match(ZScriptParser.OpenBrace);
	        this.state = 192;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4026332926) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 180264959) !== 0) || ((((_la - 79)) & ~0x1f) === 0 && ((1 << (_la - 79)) & 8129) !== 0)) {
	            this.state = 189;
	            this.statement();
	            this.state = 194;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 195;
	        this.match(ZScriptParser.CloseBrace);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDecl() {
	    let localctx = new VarDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ZScriptParser.RULE_varDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 197;
	        this.varDeclContent();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	varDeclContent() {
	    let localctx = new VarDeclContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ZScriptParser.RULE_varDeclContent);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 199;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 56) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 200;
	        this.bindingPattern();
	        this.state = 203;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===65) {
	            this.state = 201;
	            this.match(ZScriptParser.COLON);
	            this.state = 202;
	            this.type(0);
	        }

	        this.state = 207;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===61) {
	            this.state = 205;
	            this.match(ZScriptParser.Assign);
	            this.state = 206;
	            this.expression(0);
	        }

	        this.state = 209;
	        this.match(ZScriptParser.SemiColon);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bindingPattern() {
	    let localctx = new BindingPatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ZScriptParser.RULE_bindingPattern);
	    try {
	        this.state = 214;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 14:
	        case 25:
	        case 26:
	        case 29:
	        case 30:
	        case 31:
	        case 42:
	        case 43:
	        case 44:
	        case 91:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 211;
	            this.anyIdentifier();
	            break;
	        case 57:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 212;
	            this.arrayBindingPattern();
	            break;
	        case 55:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 213;
	            this.objectBindingPattern();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arrayBindingPattern() {
	    let localctx = new ArrayBindingPatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ZScriptParser.RULE_arrayBindingPattern);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 216;
	        this.match(ZScriptParser.OpenBracket);
	        this.state = 225;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 3858776064) !== 0) || ((((_la - 42)) & ~0x1f) === 0 && ((1 << (_la - 42)) & 40967) !== 0) || _la===91) {
	            this.state = 217;
	            this.bindingPattern();
	            this.state = 222;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===60) {
	                this.state = 218;
	                this.match(ZScriptParser.Comma);
	                this.state = 219;
	                this.bindingPattern();
	                this.state = 224;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 227;
	        this.match(ZScriptParser.CloseBracket);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	objectBindingPattern() {
	    let localctx = new ObjectBindingPatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ZScriptParser.RULE_objectBindingPattern);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 229;
	        this.match(ZScriptParser.OpenBrace);
	        this.state = 238;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===91) {
	            this.state = 230;
	            this.objectBindingElement();
	            this.state = 235;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===60) {
	                this.state = 231;
	                this.match(ZScriptParser.Comma);
	                this.state = 232;
	                this.objectBindingElement();
	                this.state = 237;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }
